feat(ai): streamline escalation pipeline, locator resolution, and quality judge candidates
- Streamline SelenideElementFinder resolution pipeline by removing brittle Java-level regex pre-flight gates and delegating escaping/pseudo translation to LocatorResolver
- Refactor SelectorSyntaxChecker to use jsoup QueryParser and JDK XPathFactory for offline syntax validation
- Make ContextLevel escalation strictly monotonic by escalating RICH directly to VISUAL_RICH, eliminating DOM regression
- Retain step context levels across executions and ensure state re-capture on healing escalations
- Dynamically inject candidate locators schema into ActionExtractionPrompt when Quality Judge is active
- Add detailed query, candidate, and response logging in QualityJudgeStep
- Update unit tests across ContextLevelTest, SelenideElementFinderTest, SelectorSyntaxCheckerTest, and ActionExtractionPromptTest